--- a/SPPS.tex
+++ b/SPPS.tex
@@ -37,10 +37,10 @@
 \author{
 {\bfseries В.В.~Данилов$^{1}$, О.М.~Гергет$^{1,2}$, И.П.~Скирневский$^{1}$, Р.А.~Манаков$^{1}$, Д.Ю.~Колпащиков$^{1}$} \\ {\itshape $^{1}$Лаборатория дизайна медицинских изделий, Томский политехнический университет} \\ 
 {\slshape 634050} {\itshape Томск, проспект Ленина, д. 2, стр. 33} \\ 
-{\itshape E-mail: viacheslav.v.danilov@gmail.com} \\
+{\itshape E-mail:} \\
 {\itshape $^{2}$Сибирский государственный медицинский университет} \\ 
 {\slshape 634050} {\itshape Томск, Московский тракт, д. 2} \\ 
-{\itshape E-mail: olgagerget@mail.ru}}
+{\itshape E-mail:}}
 
 \title{\uppercase{Сегментация на основе распространения динамически изменяемых суперпикселей}
 \thanks{Данная работа выполнена в рамках государственного задания «Наука» \textnumero     17.8205.2017/БЧ «Моделирование и алгоритмизация процессов обработки, анализа и репрезентации графических данных в режиме реального времени для проведения эндоваскулярных операций на сердце» (дополнительный номер: 4.1769.ГЗБ.2017).}}
