--- a/SPPS.tex
+++ b/SPPS.tex
@@ -32,7 +32,7 @@
 \rubrika{АНАЛИЗ ДАННЫХ}
 \dateinput{19.12.2019}
 
-\rusabstr{Представленная работа посвящена новому методу сегментации медицинских данных на основе распространения суперпикселей. Предлагаемый метод является модификацией классического алгоритма сегментации на основе выращивания регионов и отчасти наследует концепцию октодеревьев. Основным отличием данного подхода является переход в домен суперпикселей, а также более гибкие условия объединения суперпикселей в регион. В ходе выполнения алгоритма для объединения суперпикселей выполняются проверки на соответствие критериям однородности. Во-первых, средняя интенсивность суперпикселя сравнивается с интенсивностью полученного региона. Во-вторых, каждый пиксель, лежащий на рёбрах и диагоналях суперпикселя сравнивается с пороговым значением. Важной особенностью предлагаемого метода является динамически изменяемый (плавающий) размер суперпикселей. Формирование итогового региона осуществляется посредством построения сплайна по точкам пересечения внешних, по отношению к региону, суперпикселей. В качестве данных для оценки точности метода использовались МРТ изображения левого желудочка сердца, полученные в Университете Йорка, и опухоли головного мозга, полученные в Южном Медицинском Университетом. С целью демонстрации быстродействия метода дополнительно создан набор синтетических изображений высокого разрешения. В качестве метрики оценки точности использован коэффициент подобия Дайса. Его значения для предлагаемого метода соответствуют 0.93$\pm$0.03 и 0.89$\pm$0.07 при сегментации левого желудочка и опухоли соответственно. На основе приведённого в статье примера показано, что поэтапное уменьшение размера суперпикселя позволяет значительно увеличить скорость работы метода без потери точности.}
+\rusabstr{ПРИВЕТ ИГОРЬ Представленная работа посвящена новому методу сегментации медицинских данных на основе распространения суперпикселей. Предлагаемый метод является модификацией классического алгоритма сегментации на основе выращивания регионов и отчасти наследует концепцию октодеревьев. Основным отличием данного подхода является переход в домен суперпикселей, а также более гибкие условия объединения суперпикселей в регион. В ходе выполнения алгоритма для объединения суперпикселей выполняются проверки на соответствие критериям однородности. Во-первых, средняя интенсивность суперпикселя сравнивается с интенсивностью полученного региона. Во-вторых, каждый пиксель, лежащий на рёбрах и диагоналях суперпикселя сравнивается с пороговым значением. Важной особенностью предлагаемого метода является динамически изменяемый (плавающий) размер суперпикселей. Формирование итогового региона осуществляется посредством построения сплайна по точкам пересечения внешних, по отношению к региону, суперпикселей. В качестве данных для оценки точности метода использовались МРТ изображения левого желудочка сердца, полученные в Университете Йорка, и опухоли головного мозга, полученные в Южном Медицинском Университетом. С целью демонстрации быстродействия метода дополнительно создан набор синтетических изображений высокого разрешения. В качестве метрики оценки точности использован коэффициент подобия Дайса. Его значения для предлагаемого метода соответствуют 0.93$\pm$0.03 и 0.89$\pm$0.07 при сегментации левого желудочка и опухоли соответственно. На основе приведённого в статье примера показано, что поэтапное уменьшение размера суперпикселя позволяет значительно увеличить скорость работы метода без потери точности.}
 
 \author{
 {\bfseries В.В.~Данилов$^{1}$, О.М.~Гергет$^{1,2}$, И.П.~Скирневский$^{1}$, Р.А.~Манаков$^{1}$, Д.Ю.~Колпащиков$^{1}$} \\ {\itshape $^{1}$Лаборатория дизайна медицинских изделий, Томский политехнический университет} \\ 
