--- a/SPPS.tex
+++ b/SPPS.tex
@@ -37,10 +37,10 @@
 \author{
 {\bfseries В.В.~Данилов$^{1}$, О.М.~Гергет$^{1,2}$, И.П.~Скирневский$^{1}$, Р.А.~Манаков$^{1}$, Д.Ю.~Колпащиков$^{1}$} \\ {\itshape $^{1}$Лаборатория дизайна медицинских изделий, Томский политехнический университет} \\ 
 {\slshape 634050} {\itshape Томск, проспект Ленина, д. 2, стр. 33} \\ 
-{\itshape E-mail: viacheslav.v.danilov@gmail.com} \\
+{\itshape E-mail:  } \\
 {\itshape $^{2}$Сибирский государственный медицинский университет} \\ 
 {\slshape 634050} {\itshape Томск, Московский тракт, д. 2} \\ 
-{\itshape E-mail: olgagerget@mail.ru}}
+{\itshape E-mail: }}
 
 \title{\uppercase{Сегментация на основе распространения динамически изменяемых суперпикселей}
 \thanks{Данная работа выполнена в рамках государственного задания «Наука» \textnumero     17.8205.2017/БЧ «Моделирование и алгоритмизация процессов обработки, анализа и репрезентации графических данных в режиме реального времени для проведения эндоваскулярных операций на сердце» (дополнительный номер: 4.1769.ГЗБ.2017).}}
@@ -73,7 +73,7 @@
 
 Другим направлением в исследованиях по сегментации изображений является переход в так называемый домен суперпикселей \cite{Crommelinck2017}--\cite{Saxen2014}. Одно из самых ранних упоминаний понятия суперпикселя с подробным описанием сути метода встречается в работе Xiaofeng Ren и Jitendra Malik \cite{Ren2003}. Под суперпикселем понимается группа пикселей, объеденных по общему признаку или группе признаков. Основным преимуществом суперпикселей является переход от элементарных составляющих изображений к группам пикселей с дальнейшим рассмотрением группы, как целого объекта. При этом ключевым недостатком большинства методов, основанных на суперпикселях, является обработка каждого пикселя в рамках группы при формировании суперпикселя. Такое ограничение не позволяет получить значительных улучшений в производительности и точности метода. Самым распространенным методом группировки пикселей является линейная кластеризация (Simple Linear Iterative Clustering) \cite{Pereira2016, Crommelinck2017, Duong2018}. Детальное описание перехода в домен суперпикселей представлено в работе Radhakrishna Achanta \cite{Achanta2012}. Автор представляет сегментацию на основе суперпикселей с использованием метода k-средних и пятимерного пространства признаков. Подход на основе суперпикселей нашёл своё применение и в сегментации изображений с высоким разрешением. В работе \cite{Csillik2017} Ovidiu Csillik демонстрирует метод сегментации изображений с высоким разрешением на основании суперпикселей, полученных линейной кластеризацией. Время, затраченное на сегментацию изображений разрешением 1347$\times$1042 и 3701$\times$3301 пикселей, составило соответственно 2 и 26 секунд. 
 
-Несмотря на то, что двухмерная сегментация на основании суперпикселей достаточно широко распространена в литературе, в большинстве статей авторы не решают проблем, связанных с высокой сложностью алгоритмов, и, как следствие, длительного времени выполнения сегментации. Обозначенные недостатки особенно заметны при попытках сегментации изображений с высоким разрешением. Основной причиной увеличения сложности является обход каждого пикселя на изображении даже в случаях перехода в домен суперпикселей. В связи с вышеописанными недостатками, в данной работе представлен метод, который при сохранении точности позволяет значительно снизить скорость обработки изображений за счёт использования суперпикселей с динамически изменяемым размером. При этом формирование суперпикселей происходит без прохода по каждому пикселю изображения.
+Несмотря на то, что двухмерная сегментация на основании суперпикселей достаточно широко распространена в литературе, в большинстве статей авторы не решают проблем, связанных с высокой сложностью алгоритмов, и, как следствие, длительного времени выполнения сегментации. В данной работе представлен метод, который при сохранении точности позволяет значительно снизить скорость обработки изображений за счёт использования суперпикселей с динамически изменяемым размером. При этом формирование суперпикселей происходит без прохода по каждому пикселю изображения.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \He{\uppercase{Данные и методы}}
@@ -101,14 +101,13 @@
 
 Метод выращивания регионов построен по принципу присоединения соседних пикселей к начальной точке области интереса. Присоединение происходит исходя из условия однородности. В классической реализации алгоритма условием однородности является отклонение по яркости между соседними пикселями.  При этом связанными считаются пиксели, которые удовлетворяют критериям $4-$связности или $8-$связности.
 
-В классической версии алгоритма существует две реализации: с начальной точкой, которая устанавливается вручную внутри области интереса; без начальной точки, в которой установка первого пикселя происходит случайным образом. Схематично работа алгоритма сегментации на основании выращивания регионов представлена на рисунке \ref{fig:2}.
+В классической версии алгоритма существует две реализации: с начальной точкой, которая устанавливается вручную внутри области интереса; без начальной точки, в которой установка первого пикселя происходит случайным образом. Упрощенно работу алгоритма сегментации выращиванием регионов можно разделить на следующие шаги:
 
-\begin{figure}[ht]
-	\centering
-	\includegraphics[width=0.55\linewidth]{fig_2} 
-	\caption{Алгоритм выращивания регионов.}
-    \label{fig:2}
-\end{figure}
+\begin{enumerate}
+  \item Выбор начальной точки;
+  \item Сравнение начальной точки с соседними пикселями по условию однородности
+  \item Остановка алгоритма если все пиксели пройдены
+\end{enumerate}
 
 Функция однородности соседних пикселей описана в работе \cite{Adams1994} и представлена ниже:
 
@@ -121,13 +120,13 @@
 \newpage
 \he{Распространение суперпикселей}
 
-Как было отмечено ранее, представленный в статье метод сегментации на основании распространения суперпикселей (SPPS, сокр. от SuperPixel Propagation Segmentation) имеет схожий с методом RG принцип работы. Однако, все вычисления переводятся в домен суперпикселей, что позволяет значительно снизить сложность алгоритма и сократить время работы. В статье используется стандартное определение суперпикселя. Для двухмерного случая суперпикселем считается группа связанных пикселей квадратной формы, объединённых некоторым условием однородности. Пиксели считаются связанными, если удовлетворяют критериям $4-$связности. Соединение соседних суперпикселей в общий регион происходит на основании нескольких критериев, описанных в главе \ref{border_detection}. Итоговый контур формируется посредством сплайна Эрмита. Предложенный алгоритм сегментации SPPS приведён на рисунке \ref{fig:3}.
+Как было отмечено ранее, представленный в статье метод сегментации на основании распространения суперпикселей (SPPS, сокр. от SuperPixel Propagation Segmentation) имеет схожий с методом RG принцип работы. Однако, все вычисления переводятся в домен суперпикселей, что позволяет значительно снизить сложность алгоритма и сократить время работы. В статье используется стандартное определение суперпикселя. Для двухмерного случая суперпикселем считается группа связанных пикселей квадратной формы, объединённых некоторым условием однородности. Пиксели считаются связанными, если удовлетворяют критериям $4-$связности. Соединение соседних суперпикселей в общий регион происходит на основании нескольких критериев, описанных в главе \ref{border_detection}. Итоговый контур формируется посредством сплайна Эрмита. Предложенный алгоритм сегментации SPPS приведён на рисунке \ref{fig:2}.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=1\linewidth]{fig_3} 
+	\includegraphics[width=1\linewidth]{fig_2} 
 	\caption{Алгоритм сегментации на основании распространения суперпикселей.}
-    \label{fig:3}
+    \label{fig:2}
 \end{figure}
 
 В отличии от подходов, описанных в работах \cite{Duong2018, Wang2015}, алгоритм SPPS не анализирует каждый пиксель в составе суперпикселя. Так, при переходе в домен суперпикселей размерностью 10$\times$10 пикселей, в стандартных реализациях будут обработаны все 100 пикселей, входящих в состав суперпикселя, что соответствует вычислительной сложности равной $O(n^2)$. При размере суперпикселя 10$\times$10 пикселей для каждого суперпикселя будет обработано от 30 до 60 пикселей без потери точности сегментации (количество может меняться в зависимости от расположения суперпикселя). Формирование и анализ суперпикселей детально описано в разделе \ref{border_detection}. Концепция распространения суперпикселей с изменяемым размером представлена на рисунке \ref{fig:4}.
@@ -182,18 +181,18 @@
  
 Проверка на наличие границы производится на рёбрах и диагоналях квадрата. Если граница обнаружена на основании выполнения хотя бы одного из условий, то решение о принадлежности суперпикселя к региону отклоняется. Таким образом достигается повышение надёжности метода.
 
-Как показано на рисунке \ref{fig:5}, каждый суперпиксель имеет шесть сегментов (\textit{AB}, \textit{BC}, \textit{CD}, \textit{AD}, \textit{AC} и \textit{BD}). Очевидно, каждый отрезок формируется массивом пикселей. Таким образом, решение сводится к выполнению одномерной сегментации, а именно к поиску точки пересечения с границей области интереса на отрезке. Такой подход значительно сокращает время выполнения алгоритма SPPS. Еще одним преимуществом предлагаемого решения является возможность применения любого набора одномерных методов сегментации для поиска пересечения. Стоит отметить, что, если хотя бы один сегмент пересёк границу исследуемой области, алгоритм не обрабатывает остальные отрезки, что позволяет значительно увеличить производительность без потери в точности.
+Как показано на рисунке \ref{fig:5}, каждый суперпиксель имеет шесть сегментов (\textit{AB}, \textit{BC}, \textit{CD}, \textit{AD}, \textit{AC} и \textit{BD}). Каждый отрезок формируется массивом пикселей. Таким образом, решение сводится к поиску точки пересечения с границей области интереса на отрезке. Такой подход значительно сокращает время выполнения алгоритма. Еще одним преимуществом предлагаемого решения является возможность применения любого набора методов для поиска пересечения. Стоит отметить, что, если хотя бы один сегмент пересёк границу исследуемой области, алгоритм не обрабатывает остальные отрезки, что позволяет значительно увеличить производительность без потери в точности.
 
 \begin{figure}[!hb]
 	\centering
-	\includegraphics[width=0.8\linewidth]{fig_5}
+	\includegraphics[width=0.5\linewidth]{fig_5}
 	\caption{Суперпиксель (красный блок) пересекающий границу области интереса в трёх точках (зеленые точки).}
     \label{fig:5}
 \end{figure}
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=0.8\linewidth]{fig_6}
+	\includegraphics[width=0.5\linewidth]{fig_6}
 	\caption{Пример внешних суперпикселей, которые формируют контур области интереса (жёлтые блоки). Зелёные точки демонстрируют пересечения суперпикселей с границей объекта.}
     \label{fig:6}
 \end{figure}
@@ -209,7 +208,7 @@
 
 Как было описано выше, с целью формирования контура области интереса осуществляется обход внешних суперпикселей, которые не были прикреплены к региону. Набор внешних суперпикселей образует контур в соответствии с обязательным условием, описанным в разделе \ref{border_detection}. При определении контура обход происходит по часовой стрелке. Точки пересечения суперпикселя и границы области интереса сохраняются, создавая массив узловых пограничных точек. Такая же процедура выполняется для обхода внутренних границ региона, если таковые существуют.
 
-Имея список узловых точек, строится кубический сплайн Эрмита, который описывает внутренний и внешний контуры сегментируемой области (см. рисунок \ref{fig:7}). Итоговая маска сегментируемой области показана на рисунке \ref{fig:8}.
+Имея список узловых точек, строится кубический сплайн Эрмита, который описывает внутренний и внешний контуры сегментируемой области (см. рисунок \ref{fig:7}). Итоговая маска сегментируемой области показана полупрозрачным фиолетовым цветом на рисунке \ref{fig:7} .
 
 
 Точкой пересечения является пиксель, который лежит на рёбрах или диагонали суперпексиля и находится в точке пересечения с границей исследуемой области. Алгоритм определения пересечения с границей области интереса описан в разделе \ref{border_detection}. После того, как все точки пересечения получены существует несколько вариантов формирования итогового контура. Наиболее примитивный – соединение каждой точки отрезками. Однако, такой подход значительно снижает итоговую точность сегментации. Оптимальный подход с точки зрения скорости и точности - построение регрессии полученных точек контура. Проведя исследование и анализ разных подходов, было принято решение отказаться от использования линейного сплайн, поскольку он дает значительную ошибку при построении границ контура. $B$-сплайн также снижает точность сегментации, так как не проходит через точки экстремума. Эмпирически было показано, что применение кубического эрмитова сплайна дает наиболее точный результат сегментации, что достигается за счёт возможности прохода через узловые точки и подбора достаточной кривизны на выпуклых и вогнутых участках изображения.
@@ -221,12 +220,6 @@
     \label{fig:7}
 \end{figure}
 
-\begin{figure}[!ht]
-	\centering
-	\includegraphics[width=0.8\linewidth]{fig_8}
-	\caption{Итоговая сегментация области интереса. Синим цветом выделена граница области, полученная с использованием сплайна, фиолетовым – итоговая маска области интереса.}
-    \label{fig:8}
-\end{figure}
 
 Таким образом, результатом метода сегментации является кубический сплайн, описывающий контур исследуемой области. Такое аналитическое представление может быть более предпочтительным, чем представление сегментированной области в форме маски. 
 
@@ -245,7 +238,7 @@
 
 \he{Сложность алгоритма}
 
-В стандартной реализации алгоритма выращивания регионов требуется по меньшей мере \textit{N}$^2$ операций для того, чтобы обработать изображение размером \textit{N}$\times$\textit{N} пикселей, что соответствует сложности алгоритма $O(n^2)$. В свою очередь, в предлагаемом алгоритме, для обработки изображения размером \textit{N}$\times$\textit{N} пикселей, требуется от \textit{3}$\times$\textit{N} до \textit{5}$\times$\textit{N} операций, в зависимости от параметров алгоритма. Единственным исключением является первый суперпиксель, для которого необходимо обработать \textit{6}$\times$\textit{N} пикселей, то есть все диагонали и рёбра суперпикселя. Таким образом, асимптотическая сложность алгоритма SPPS равна $O(n)$. Снижение сложности достигается за счёт перехода в домен суперпикселей. Как будет показано ниже, прирост в скорости вычислений при подобных переходах особенно заметен на изображениях с высоким разрешением.  
+В стандартной реализации алгоритма выращивания регионов требуется по меньшей мере \textit{N}$^2$ операций для того, чтобы обработать изображение размером \textit{N}$\times$\textit{N} пикселей, что соответствует сложности алгоритма $O(n^2)$. В свою очередь, в предлагаемом алгоритме, для обработки изображения размером \textit{N}$\times$\textit{N} пикселей, требуется от \textit{3}$\times$\textit{N} до \textit{5}$\times$\textit{N} операций, в зависимости от параметров алгоритма. Единственным исключением является первый суперпиксель, для которого необходимо обработать \textit{6}$\times$\textit{N} пикселей, то есть все диагонали и рёбра суперпикселя. Таким образом, асимптотическая сложность алгоритма SPPS равна $O(n)$. Как будет показано ниже, прирост в скорости вычислений при подобных переходах особенно заметен на изображениях с высоким разрешением.  
 
 \He{\uppercase{Результаты}}
 
@@ -253,7 +246,7 @@
 
 \he{Сегментация левого желудочка}
 
-Сегментация левого желудочка, выполненная представленным методом SPPS, методом выращивания регионов RG, методом активных контуров AC и эталонной сегментации GT, представлены на рисунке \ref{fig:9}. Как видно из рисунка \ref{fig:9}, для пациентов 2 и 3 метод выращивания регионов сильно выходит за границы региона интереса, что не позволяет выполнить точную сегментацию. Аналогичная картина наблюдается для метода активных контуров. Несмотря на то, что подобные утечки могут быть нивелированы различного рода улучшениями, для работы с разрывами границ потребуются дополнительные вычислительные ресурсы. В свою очередь, метод SPPS позволяет избежать проблемы протекания в местах с низкой интенсивностью на границе за счёт управления размером суперпикселей.  
+Сегментация левого желудочка, выполненная представленным методом SPPS, методом выращивания регионов RG, методом активных контуров AC и эталонной сегментации GT, представлены на рисунке \ref{fig:9}. Как видно из рисунка \ref{fig:9}, для пациента 2 метод выращивания регионов сильно выходит за границы региона интереса, что не позволяет выполнить точную сегментацию. Аналогичная картина наблюдается для метода активных контуров. Несмотря на то, что подобные утечки могут быть нивелированы различного рода улучшениями, для работы с разрывами границ потребуются дополнительные вычислительные ресурсы. В свою очередь, метод SPPS позволяет избежать проблемы протекания в местах с низкой интенсивностью на границе за счёт управления размером суперпикселей.  
 
 \begin{figure*}[!ht]
 	\centering
@@ -268,7 +261,7 @@
 		\includegraphics[width=0.31\linewidth]{fig_9_b_1}&
 		\includegraphics[width=0.31\linewidth]{fig_9_c_1} \vspace{0.05cm}
 	\end{tabular}
-
+	
 	\begin{tabular}{ccc}
 		\textbf{} & 
 		\textbf{Пациент 2} & 
@@ -279,18 +272,6 @@
 		\includegraphics[width=0.31\linewidth]{fig_9_a_2}&
 		\includegraphics[width=0.31\linewidth]{fig_9_b_2}&
 		\includegraphics[width=0.31\linewidth]{fig_9_c_2} \vspace{0.05cm}
-	\end{tabular}
-	
-	\begin{tabular}{ccc}
-		\textbf{} & 
-		\textbf{Пациент 3} & 
-		\textbf{} \vspace{0.05cm} \\ 
-		AC vs GT &
-		RG vs GT & 
-		SPPS vs GT \vspace{0.05cm} \\  
-		\includegraphics[width=0.31\linewidth]{fig_9_a_3}&
-		\includegraphics[width=0.31\linewidth]{fig_9_b_3}&
-		\includegraphics[width=0.31\linewidth]{fig_9_c_3} \vspace{0.05cm}
 	\end{tabular}	
 	\caption{Сегментация левого желудочка в сравнении с эталонной сегментацией (зелёный контур).}
     \label{fig:9}
@@ -349,7 +330,7 @@
 		\includegraphics[width=0.31\linewidth]{fig_12_b_1}&
 		\includegraphics[width=0.31\linewidth]{fig_12_c_1} \vspace{0.05cm}
 	\end{tabular}
-
+	
 	\begin{tabular}{ccc}
 		\textbf{} & 
 		\textbf{Пациент 2} & 
@@ -360,18 +341,6 @@
 		\includegraphics[width=0.31\linewidth]{fig_12_a_2}&
 		\includegraphics[width=0.31\linewidth]{fig_12_b_2}&
 		\includegraphics[width=0.31\linewidth]{fig_12_c_2} \vspace{0.05cm}
-	\end{tabular}
-	
-	\begin{tabular}{ccc}
-		\textbf{} & 
-		\textbf{Пациент 3} & 
-		\textbf{} \vspace{0.05cm} \\ 
-		AC vs GT &
-		RG vs GT & 
-		SPPS vs GT \vspace{0.05cm} \\  
-		\includegraphics[width=0.31\linewidth]{fig_12_a_3}&
-		\includegraphics[width=0.31\linewidth]{fig_12_b_3}&
-		\includegraphics[width=0.31\linewidth]{fig_12_c_3} \vspace{0.05cm}
 	\end{tabular}	
 	\caption{Сегментация опухоли мозга в сравнении с эталонной сегментацией (зелёный контур).}
     \label{fig:12}
